<resources>
    <string name="app_name">FSApp</string>
    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_div">/</string>
    <string name="_equal">=</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="ft">FT</string>
    <string name="ftg">FTG</string>
    <string name="ftng">FTNG</string>
</resources>